--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta hhtp-equiv="X-UA-Compatible" content="IE-Edge">
+    <meta
+      name="description"
+      content="Josh Nassif Portfolio"
+    />
 
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
@@ -15,8 +20,11 @@
 
     <!-- Custom css-->
     <link rel="stylesheet" href="css/custom.css">
+
+    <title>Welcome!</title>
   </head>
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
 
